--- a/README.Rmd
+++ b/README.Rmd
@@ -72,15 +72,16 @@ Using `theme_rocket()` to create an efficiency table
 ```{r effectiveness,fig.width=10}
 pokemon %>%
   distinct(type1,.keep_all=TRUE) %>%
-  select(attacker = type1,against_bug:against_water) %>%
-  gather(defender,effect,against_bug:against_water) %>%
-  mutate(defender = str_replace_all(defender,"against_",""))  %>%
+  select(defender = type1,against_bug:against_water) %>%
+  gather(attacker,effect,against_bug:against_water) %>%
+  mutate(attacker = str_replace_all(attacker,"against_",""))  %>%
   ggplot(aes(y=attacker,x=defender,fill=factor(effect)))+
   geom_tile()+
   geom_text(aes(label=ifelse(effect!=1,effect,"")))+
   scale_fill_manual(values=c("#8B1A1A", "#CD2626", "#EE2C2C", "#FFFFFF", "#00CD00", "#008B00"))+
   theme_rocket(legend.position="none")+
   labs(title="Efficiency Table")
+
 ```
 
 Annotate your plots with your favorite Pokémon Go team.
