--- a/README.Rmd
+++ b/README.Rmd
@@ -108,7 +108,7 @@ example from [here](https://github.com/PokeAPI/sprites).
 
 ```{r poke-pie,eval=FALSE}
 #basic usage
-poke_pie(path_to_sprites,poke)
+poke_pie(path_to_sprites,pokemon_name)
 ```
 
 ![](figures/poke-pies.png)
@@ -137,8 +137,8 @@ pokemon %>%
 
 # Fonts
 
-Download the Font [here](https://github.com/Superpencil/pokemon-font/releases/tag/v1.8.1)
-and install it.
+The package uses an old school gameboy font for some of its themes, which
+can be download [here](https://github.com/Superpencil/pokemon-font/releases/tag/v1.8.1).
 
 In order to use the font in R you need the `extrafont` package.
 ```{R install-fonts, eval=FALSE}
@@ -156,7 +156,7 @@ import_pokefont()
 #Color Palettes
 
 The package also includes color palettes, which were automatically generated from
-all 801 pokemon sprites. I so far did not check all palettes, so there may well be
+all 801 pokemon sprites. So far, I did not check all palettes, so there may well be
 some weird ones. A better alternative would be to use the dedicated package `palettetown`.
 See the github [repo](https://github.comt/imcdlucas/palettetown) for help. 
 ```{R palettes, eval=FALSE}
