--- a/README.Rmd
+++ b/README.Rmd
@@ -50,7 +50,6 @@ ggplot(pokemon,aes(attack,defense))+
        subtitle = "blast off at the speed of light!",
        caption = "meowth that's right")
 
-
 ```
 
 ## Gamyboy theme
@@ -58,13 +57,21 @@ ggplot(pokemon,aes(attack,defense))+
 If you want to get nostalgic.
 
 ```{r theme-gameboy}
-ggplot(pokemon,aes(attack,defense))+
-  geom_point(shape = 15,col = c("#006400"),size=2)+
-  theme_gameboy()+
-  labs(title = "Classic Gameboy Theme")
+p1 <- ggplot(pokemon,aes(attack,defense))+
+        geom_point(shape = 15,col = "#006400",size=2)+
+        theme_gameboy()+
+        labs(title = "Classic Gameboy Theme")
+
+p2 <- ggplot(pokemon,aes(attack,defense))+
+        geom_point(shape = 15,col = "#27408B",size=2)+
+        theme_gba()+
+        labs(title = "Gameboy Advanced Theme")
+
+gridExtra::grid.arrange(grobs=list(p1,p2),ncol=2)
+
 ```
 
-## Status theme and health bars.
+## Status theme and HP bar chart
 
 A theme inspired by HP bar in older Pokemon games. The theme is used in `gghealth`,
 a function that plots bar charts in HP bar style.
