--- a/README.Rmd
+++ b/README.Rmd
@@ -57,19 +57,21 @@ ggplot(pokemon,aes(attack,defense))+
 If you want to get nostalgic.
 
 ```{r theme-gameboy}
-p1 <- ggplot(pokemon,aes(attack,defense))+
-        geom_point(shape = 15,col = "#006400",size=2)+
-        theme_gameboy()+
-        labs(title = "Classic Gameboy Theme")
-
-p2 <- ggplot(pokemon,aes(attack,defense))+
-        geom_point(shape = 15,col = "#27408B",size=2)+
-        theme_gba()+
-        labs(title = "Gameboy Advanced Theme")
-
-gridExtra::grid.arrange(grobs=list(p1,p2),ncol=2)
+ggplot(pokemon,aes(attack,defense))+
+  geom_point(shape = 15,col = "#006400",size=2)+
+  theme_gameboy()+
+  labs(title = "Classic Gameboy Theme")
 
 ```
+
+
+```{r theme-gba}
+ggplot(pokemon,aes(attack,defense))+
+  geom_point(shape = 15,col = "#27408B",size=2)+
+  theme_gba()+
+  labs(title = "Gameboy Advanced Theme")
+```
+
 
 ## Status theme and HP bar chart
 
