--- a/README.Rmd
+++ b/README.Rmd
@@ -20,8 +20,8 @@ knitr::opts_chunk$set(
 
 ![](rokemon.png) 
 
-An R package to create Pokemon style ggplots. It also includes a dataset of 801 Pokemon
-with 41 features.
+An R package to create Pokemon inspired ggplots. It also comes with dataset of 801 Pokemon
+with 41 different features (Gotta analyze'em all!).
 
 # Install
 ```{r install, eval = FALSE}
