--- a/README.Rmd
+++ b/README.Rmd
@@ -146,6 +146,22 @@ pokemon %>%
 
 ```
 
+#Color Palettes
+
+The package also includes color palettes, which were automatically generated from
+all 801 pokemon sprites. 
+```{r poke-pals,eval=FALSE}
+poke_pal(name,n)
+display_poke_pal(name)
+```
+![](figures/palettes.png)
+
+I did not check all palettes, so there may well be
+some meaningless ones. A better alternative would be to use the dedicated package `palettetown`.
+See the github [repo](https://github.comt/imcdlucas/palettetown) for help. 
+```{R palettes, eval=FALSE}
+install.packages('palettetown')
+```
 
 # Fonts
 
@@ -162,17 +178,6 @@ extrafont::loadfonts()
 Alternatively, you can use the function `import_pokefont()`.
 ```{r import-fonts,eval=FALSE}
 import_pokefont()
-```
-
-
-#Color Palettes
-
-The package also includes color palettes, which were automatically generated from
-all 801 pokemon sprites. So far, I did not check all palettes, so there may well be
-some weird ones. A better alternative would be to use the dedicated package `palettetown`.
-See the github [repo](https://github.comt/imcdlucas/palettetown) for help. 
-```{R palettes, eval=FALSE}
-install.packages('palettetown')
 ```
 
 # Addendum
