text/figure fixes

--- a/README.Rmd
+++ b/README.Rmd
@@ -52,7 +52,7 @@ Pokemon Palettes
 
 # Install
 
-## From Cran
+## From CRAN
 
 not released yet
 
@@ -171,7 +171,8 @@ display_poke_pal(name)
 ```
 ![](figures/palettes.png)
 
-Additionally there is also a palette for Team Rocket (`rocket_pal`) and the Pokemon Types (`type_pal`).
+Additionally there is also a palette Pokemon Types, used by `scale_color_poketype()` and
+`scale_fill_poketype()`.
 ![](figures/rocket-type-pal.png)
 
 I did not check all Pokemon palettes, so there may well be
